--- a/.github/workflows/test_gitaction.yml
+++ b/.github/workflows/test_gitaction.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   pull_request:
-    branches: [ master ]    # main 브랜치에 PR 보낼 때 실행
+    branches: [ master ]    # master 브랜치에 PR 보낼 때 실행
 
 jobs:
   test:
