--- a/.github/workflows/test_gitaction.yml
+++ b/.github/workflows/test_gitaction.yml
@@ -21,8 +21,18 @@ jobs:
           distribution: 'temurin'
           cache: gradle  # Gradle 캐싱 활성화
 
+      - name: create-json
+        id: create-json
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "gce_sa_key.json"
+          json: ${{ secrets.GCE_SA_KEY }}
+
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: |
+          pwd
+          ls
+          chmod +x gradlew
 
       - name: Test with Gradle
         run: ./gradlew --info test
