--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     testImplementation "org.mockito:mockito-core:3.+"
+    testImplementation 'com.github.dasniko:testcontainers-keycloak:3.7.0'
 }
 
 tasks.named('test') {
