--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,11 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     testImplementation "org.mockito:mockito-core:3.+"
-    testImplementation 'com.github.dasniko:testcontainers-keycloak:3.7.0'
+    testImplementation 'org.testcontainers:testcontainers'
+    testImplementation "com.redis.testcontainers:testcontainers-redis-junit:1.6.4"
 }
 
 tasks.named('test') {
